# todo-app-demo

./: .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  seed_example_data.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 5a0edc518305_initial_tables.py
tests/: test_app.py  test_arch.py
todo_app/: crud.py  database.py  exceptions.py  main.py  models.py  tables.py
todo_app/services/: __init__.py  crud.py  mappers.py
todo_app/tables/: __init__.py  tag.py  todo.py
